--- a/freshclam.conf
+++ b/freshclam.conf
@@ -1,9 +1,24 @@
-DatabaseDirectory C:\db
-DatabaseMirror database.clamav.net
-MaxAttempts 3
-NotifyClamd C:/Program Files/ClamAV-x64/clamav-0.105.0.win.x64/clamd.conf
-LogFileMaxSize 20480000
+DatabaseOwner clamav
+UpdateLogFile /var/log/clamav/freshclam.log
+LogVerbose false
+LogSyslog false
+LogFacility LOG_LOCAL6
+LogFileMaxSize 0
+LogRotate true
 LogTime true
-UpdateLogFile C:/logs/freshclam.log
-LogVerbose yes
-Checks 12
+Foreground false
+Debug false
+MaxAttempts 5
+DatabaseDirectory /var/lib/clamav
+DNSDatabaseInfo current.cvd.clamav.net
+ConnectTimeout 30
+ReceiveTimeout 0
+TestDatabases yes
+ScriptedUpdates yes
+CompressLocalDatabase no
+Bytecode true
+NotifyClamd /etc/clamav/clamd.conf
+# Check for new database 24 times a day
+Checks 24
+DatabaseMirror db.local.clamav.net
+DatabaseMirror database.clamav.net
