--- a/freshclam.conf
+++ b/freshclam.conf
@@ -1,23 +1,9 @@
-DatabaseOwner clamav
-UpdateLogFile /var/log/clamav/freshclam.log
-LogVerbose false
-LogSyslog false
-LogFacility LOG_LOCAL6
-LogFileMaxSize 0
-LogRotate true
-LogTime true
-Foreground false
-Debug false
-MaxAttempts 5
-DatabaseDirectory /var/lib/clamav
-DNSDatabaseInfo current.cvd.clamav.net
-ConnectTimeout 30
-ReceiveTimeout 0
-TestDatabases yes
-ScriptedUpdates yes
-CompressLocalDatabase no
-Bytecode true
-NotifyClamd /etc/clamav/clamd.conf
-Checks 24
-DatabaseMirror db.local.clamav.net
+DatabaseDirectory C:\db
 DatabaseMirror database.clamav.net
+MaxAttempts 3
+NotifyClamd C:/Program Files/ClamAV/clamd.conf
+LogFileMaxSize 20480000
+LogTime true
+UpdateLogFile C:/logs/freshclam.log
+LogVerbose yes
+Checks 12
